--- a/marcas.html
+++ b/marcas.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -46,6 +46,7 @@
     <img class="tresMarcas" src="imagen/descarga.jpeg">
     </div>
     <!--Agrego el Google Fonts para HTML-->
+    <!--
  
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap" rel="stylesheet">
     </main>
