--- a/indexnike.html
+++ b/indexnike.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -29,6 +29,7 @@
     <img class="nike" src="./imagen/pagina nike/zapatillas-nike-2020-.jpeg" alt="">
     </div>
     <!--Agrego el Google Fonts para HTML-->
+    <!----
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap" rel="stylesheet">
 </main>
 
